--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -8,7 +8,8 @@
   <script src="https://cdn.jsdelivr.net/npm/jwt-decode@3.1.2/build/jwt-decode.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://sdk.twilio.com/js/client/v1.14/twilio.min.js"></script>
+  <!-- <script src="https://sdk.twilio.com/js/client/v1.14/twilio.min.js"></script> -->
+  <script src="twilio.min.js"></script>
   <title>Dashboard</title>
   <style>
     body {
@@ -406,29 +407,28 @@
       });
 
     async function initTwilio(phoneNumber) {
-      try {
-        const response = await axios.post('https://twilio-api-t328.onrender.com/get-token', {
-          phoneNumber: phoneNumber
-        });
+    try {
+      const response = await axios.post('https://twilio-api-t328.onrender.com/get-token', { phoneNumber });
+      const token = response.data.token;
+      currentPhoneNumber = phoneNumber;
 
-        const data = response.data;
-        currentPhoneNumber = phoneNumber;
-        device = new Twilio.Device(data.token, { logLevel: 1 });
+      // v2 init (logLevel string recommended)
+      device = new Twilio.Device(token, { logLevel: 'info' });
 
-        device.on("ready", () => console.log("✅ Twilio Device Ready"));
-        device.on("error", error => console.error("❌ Twilio Error:", error));
+      device.on('ready', () => console.log('✅ Twilio Device Ready'));
+      device.on('error', error => console.error('❌ Twilio Error:', error));
 
-        device.on("incoming", (connection) => {
-          console.log("📞 Incoming call from Twilio!");
+      // incoming: rename connection -> call
+      device.on('incoming', (call) => {
+        console.log('📞 Incoming call from', call.parameters?.From || 'unknown');
+        call.accept();
+        console.log('✅ Call accepted!');
+      });
 
-          connection.accept(); // ✅ Must accept the call!
-          console.log("✅ Call accepted!");
-        });
-
-      } catch (error) {
-        console.error("❌ Error initializing Twilio:", error);
-      }
+    } catch (error) {
+      console.error('❌ Error initializing Twilio:', error);
     }
+  }
 
     async function fetchPhoneNumbers() {
       try {
