--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -9,7 +9,6 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@twilio/voice-sdk@2.15.0/dist/twilio.min.js"></script>
-  <!-- <script src="twilio.min.js"></script> -->
   <title>Dashboard</title>
   <style>
     body {
@@ -408,25 +407,26 @@
 
     async function initTwilio(phoneNumber) {
       try {
-        const response = await axios.post('https://twilio-api-t328.onrender.com/get-token', { phoneNumber });
-        const token = response.data.token;
+        const response = await axios.post('https://twilio-api-t328.onrender.com/get-token', {
+          phoneNumber: phoneNumber
+        });
+
+        const data = response.data;
         currentPhoneNumber = phoneNumber;
+        device = new Twilio.Device(data.token, { logLevel: 1 });
 
-        // v2 init (logLevel string recommended)
-        device = new Twilio.Device(token, { logLevel: 'info' });
+        device.on("ready", () => console.log("✅ Twilio Device Ready"));
+        device.on("error", error => console.error("❌ Twilio Error:", error));
 
-        device.on('ready', () => console.log('✅ Twilio Device Ready'));
-        device.on('error', error => console.error('❌ Twilio Error:', error));
+        device.on("incoming", (connection) => {
+          console.log("📞 Incoming call from Twilio!");
 
-        // incoming: rename connection -> call
-        device.on('incoming', (call) => {
-          console.log('📞 Incoming call from', call.parameters?.From || 'unknown');
-          call.accept();
-          console.log('✅ Call accepted!');
+          connection.accept(); // ✅ Must accept the call!
+          console.log("✅ Call accepted!");
         });
 
       } catch (error) {
-        console.error('❌ Error initializing Twilio:', error);
+        console.error("❌ Error initializing Twilio:", error);
       }
     }
 
