--- a/public/login.html
+++ b/public/login.html
@@ -77,7 +77,7 @@
       <p class="error" id="error-message"></p>
     </form>
     <div class="footer">
-      <p>&copy; 2025 Your Company</p>
+      <p>&copy; 2025 Twilio API</p>
     </div>
   </div>
 
